retrieve information from firebase database

--- a/PasswordKeeper/src/app/main/main.component.html
+++ b/PasswordKeeper/src/app/main/main.component.html
@@ -1,3 +1,5 @@
-<p>
-  main works!
-</p>
+<md-grid-list cols="3" rowHeight="2:1">
+  <md-grid-tile *ngFor="let password of stream | async">
+    <pre>{{password | json}}</pre>
+  </md-grid-tile>
+</md-grid-list>
