Add DIalog UI updated

--- a/PasswordKeeper/src/app/main/main.component.html
+++ b/PasswordKeeper/src/app/main/main.component.html
@@ -3,3 +3,4 @@
     <pre>{{password | json}}</pre>
   </md-grid-tile>
 </md-grid-list>
+<a md-fab (click)="showPasswordDialog()"><md-icon>add</md-icon></a>
