--- a/PasswordKeeper/src/app/main/main.component.html
+++ b/PasswordKeeper/src/app/main/main.component.html
@@ -1,6 +1,8 @@
-<md-grid-list cols="3" rowHeight="2:1">
-  <md-grid-tile *ngFor="let password of stream | async">
-    <pre>{{password | json}}</pre>
+<md-grid-list [cols]="numColumns">
+  <md-grid-tile *ngFor="let password of passwordStream | async">
+    <app-password-display-card fxFlex [password]=password>
+
+    </app-password-display-card>
   </md-grid-tile>
 </md-grid-list>
 <a md-fab (click)="showPasswordDialog()"><md-icon>add</md-icon></a>
