--- a/PasswordKeeper/src/app/password-display-card/password-display-card.component.scss
+++ b/PasswordKeeper/src/app/password-display-card/password-display-card.component.scss
@@ -23,5 +23,12 @@ md-card{
 }
 
 .hidden-content{
+    height:105px;
+    overflow: hidden;
+    transition: all 300ms ease-in-out;
+    
+}
+.hidden-content.hidden{
+    height:0;
     
 }
