Remove button works on card

--- a/PasswordKeeper/src/app/password-display-card/password-display-card.component.html
+++ b/PasswordKeeper/src/app/password-display-card/password-display-card.component.html
@@ -20,8 +20,8 @@
 </md-card-content>
 
 <md-card-actions fxLayoutAlign="end center">
-  <button md-button type="button" style="background-color: #2495b5">Edit</button>
-  <button md-button type="button" style="background-color: #b52439">Delete</button>
+  <button md-button (click)="edit()" type="button" style="background-color: #2495b5">Edit</button>
+  <button md-button (click)="delete()" type="button" style="background-color: #b52439">Delete</button>
 </md-card-actions>
 </div>
 </md-card>
