--- a/PasswordKeeper/src/app/main/main.component.html
+++ b/PasswordKeeper/src/app/main/main.component.html
@@ -1,6 +1,6 @@
 <md-grid-list [cols]="numColumns">
   <md-grid-tile *ngFor="let password of passwordStream | async">
-    <app-password-display-card fxFlex [password]=password>
+    <app-password-display-card fxFlex [password]=password [firebasePath]="firebasePath">
 
     </app-password-display-card>
   </md-grid-tile>
