--- a/PasswordKeeper/src/app/password-display-card/password-display-card.component.scss
+++ b/PasswordKeeper/src/app/password-display-card/password-display-card.component.scss
@@ -1,6 +1,7 @@
 $horz-padding: 20px;
 
 md-card{
+    margin:10px;
     md-card-title{
         padding: 10px $horz-padding;
         font-size:24px;
@@ -15,7 +16,6 @@ md-card{
 
     md-card-actions{
         padding: 10px $horz-padding;
-        margin: 0;
         button{
             color: white;
         }
